<resources>
    <string name="app_name">ShareFood</string>
    <string name="key_map">AIzaSyAlVCCmNiHaWLHJKIy86FuA150GhcO9HEU</string>
    <string name="welcome">Chào mừng bạn đến Share Food</string>
    <string name="special">Nổi bật</string>
    <string name="list_food">Danh sách món ăn</string>
    <string name="search">Tìm kiếm</string>
    <string name="category">Thực đơn</string>
    <string name="map">Bản đồ</string>
    <string name="list_restaurant">Danh sách nhà hàng</string>
    <string name="login">Đăng nhập</string>
    <string name="register_restaurant">Đăng ký nhà hàng</string>
    <string name="check_connect">Đường truyền không ổn định.</string>
    <string name="select_quantum">Chọn số lượng</string>
    <string name="quantum">Nhập số lượng bạn muốn đặt...</string>
    <string name="distance_error">Bạn không thể đặt món ăn này do khoảng cách địa lý.</string>
    <string name="added">Đã thêm</string>
    <string name="into_cart">Vào giỏ hàng.</string>
    <string name="shopping_cart">Giỏ hàng</string>
    <string name="total">Tổng tiền:</string>
    <string name="pay">Thanh toán</string>
    <string name="count_none">Giỏ hàng trống</string>
    <string name="max_count">Số lượng tối đa là 99</string>
    <string name="food_detail">Thông tin món ăn</string>
    <string name="call">Liên hệ đặt món</string>
    <string name="res_info">Thông tin nhà hàng</string>
    <string name="food_info">Thông tin món ăn</string>
    <string name="recipe">Công thức</string>
    <string name="comments">Bình luận</string>
    <string name="select_province">Chọn tình thành phố</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Tài khoản đăng nhập...</string>
    <string name="password">Mật khẩu...</string>
    <string name="name">Họ và tên...</string>
    <string name="phone">Số điện thoại...</string>
    <string name="address">Địa chỉ...</string>
    <string name="register">Đăng ký</string>
    <string name="into_info">Bạn cần nhập đủ thông tin</string>
    <string name="login_fail">Tên đăng nhập hoặc mật khẩu không chính xác</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="register_success">Đăng ký thành công</string>
    <string name="logout">Đăng xuất</string>
    <string name="view">Xem</string>
    <string name="error">Lỗi không xác định</string>
    <string name="send">Gửi</string>
    <string name="enter_comment">Nhập bình luận...</string>
    <string name="login_please">Bạn cần đăng nhập</string>
    <string name="name_restaurant">Tên nhà hàng...</string>
    <string name="open_restaurant">Giờ mở cửa...</string>
    <string name="close_restaurant">Giờ đóng cửa...</string>
    <string name="web">Website...</string>
    <string name="logo">Link logo...</string>
    <string name="name_res">Tên nhà hàng</string>
    <string name="open_time">Giờ mở cửa</string>
    <string name="close_time">Giờ đóng cửa</string>
    <string name="address_res">Địa chỉ</string>
    <string name="phone_res">Số điện thoại</string>
    <string name="website">Website</string>
    <string name="logo_res">Logo nhà hàng</string>
    <string name="thumbnai_res">Ảnh nhà hàng</string>
    <string name="fav">Yêu thích</string>
</resources>
