<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".fragment.RegisterFragment">

    <ImageView
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_logo"
        android:layout_width="150dp"
        android:layout_height="150dp" />

    <EditText
        android:id="@+id/edtUserNameRegister"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:drawablePadding="15dp"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:padding="10dp"
        android:inputType="text"
        android:hint="@string/user_name"
        android:background="@drawable/background_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtPasswordRegister"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:drawablePadding="15dp"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/background_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtNameRegister"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:drawablePadding="15dp"
        android:drawableLeft="@drawable/ic_perm_contact_calendar_black_24dp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:hint="@string/name"
        android:background="@drawable/background_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtPhoneRegister"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:drawablePadding="15dp"
        android:drawableLeft="@drawable/ic_perm_contact_calendar_black_24dp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:hint="@string/name"
        android:background="@drawable/background_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="70dp"
        style="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:background="@drawable/background_login"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>