<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ShoppingCartActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarShopping"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="?android:attr/actionBarSize">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imBack"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.example.sharefood.view.CustomItalyTextView
                android:layout_width="wrap_content"
                android:text="@string/shopping_cart"
                android:textColor="@color/white"
                android:layout_gravity="center"
                style="?android:attr/textAppearanceLarge"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imDeleteAll"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical|right"
                android:src="@drawable/ic_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp" />
        </FrameLayout>
    </android.support.v7.widget.Toolbar>

    <ListView
        android:id="@+id/lvCart"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v7.widget.CardView
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.example.sharefood.view.CustomItalyTextView
                    android:layout_width="wrap_content"
                    android:padding="5dp"
                    android:text="@string/total"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_height="wrap_content" />
                <com.example.sharefood.view.CustomItalyTextView
                    android:id="@+id/tvTotalAmount"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:padding="5dp"
                    android:gravity="right"
                    android:layout_marginRight="10dp"
                    android:text="@string/total"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/btnPay"
                android:layout_margin="15dp"
                android:paddingLeft="20dp"
                style="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:text="@string/pay"
                android:background="@drawable/baclground_ver2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>